Added basic neovim config

--- a/install
+++ b/install
@@ -4,3 +4,6 @@ CFGDIR="$HOME/.config"
 
 rm -rf $CFGDIR/kitty
 ln -s $DOTDIR/kitty $CFGDIR/kitty
+
+rm -rf $CFGDIR/nvim
+ln -s $DOTDIR/nvim $CFGDIR/nvim
